--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
 
 <body>
     <div id="index"></div>
-    <script src="../lib/bundledOutputs/demo.js"></script>
+    <!-- <script src="../lib/bundledOutputs/demo.js"></script> -->
+    <script src="../lib/bundledOutputs/demo.js"></script>
 </body>
 
 </html>
